Write help texts.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,4 @@
 {
-    "The challenge is now available. You must not change it.":"Dieser Test ist jetzt veröffentlich und darf nicht geändert werden.",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -65,6 +64,7 @@
     "Cancel": "Verwerfen",
     "Challenge was successfully modified.": "Test wurde erfolgreich gespeichert",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
+    "Clean up and archive results": "Ergebnisse archivieren und löschen",
     "Collect files": "Dateien einsammeln",
     "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus den Exportverzeichnissen der angemeldeten Benutzer oder der Workstationsbenutzer einsammeln.",
     "Comma separated list": "Elemente mit Komma trennen!",
@@ -74,6 +74,7 @@
     "Content of the log": "Inhalt der Logdatei",
     "Count of accounts": "Anzahl der Benutzerkonten",
     "Create AdHoc-Room": "AdHoc-Raum für die Gruppe anlegen",
+    "Create Tests": "Tests erstellen",
     "Create a new announcement": "Neue Nachricht erstellen",
     "Create a new contact": "Neuen Kontak erstellen",
     "Create a new customer.": "Einen neuen Kunden anlegen",
@@ -97,6 +98,7 @@
     "DNS server configuration was written successfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
     "Default Printer": "Standarddrucker",
     "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählte Server konfigurieren",
+    "Delete challenge": "Test löschen",
     "Delete hwconf": "Gerätekonfiguration löschen",
     "Delete institute": "Institution löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
@@ -113,7 +115,9 @@
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
+    "Download detailed results": "Ausführliche Auswertung herunterladen",
     "Download of the softwares was started successfully": "Das Heruntreladen von Softwarepaketen wurde gestartet.",
+    "Download results": "Ergebnisse herunterladen",
     "Download software packages.": "Softwarepakete herunterladen.",
     "Download the installation image": "Installationsmedium herunterladen",
     "Download the password files as pdf files.": "Passwortdateien als PDF's herunterladen.",
@@ -231,8 +235,8 @@
     "Modify selected institute:": "Institut bearbeiten:",
     "Modify selected user:": "Benutzer bearbeiten:",
     "Modify selecter group:": "Gruppe bearbeiten",
-    "Multicast cloning of": "Multicast Klonen von",
     "More right answers": "Mehrere richtigen Antworten",
+    "Multicast cloning of": "Multicast Klonen von",
     "My Devices": "Eigene Geräte",
     "My groups": "Eigene Gruppen",
     "My guests": "Eigene Gastgruppen",
@@ -290,6 +294,7 @@
     "Rooms were imported successfully.": "Räume wurden erfolgreich importiert.",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
+    "Save challenge": "Test speichern",
     "Security": "Sicherheit",
     "Select DHCP Option/Statement": "DHCP Option oder Anweisung wählen",
     "Select OS": "Betriebssystem auswählen",
@@ -322,6 +327,8 @@
     "Set printers": "Drucker zuordnen",
     "Set the next default values": "Folgende Standardwerte eintragen",
     "Settings": "Einstellungen",
+    "Show detailed results": "Ausführliche Auswertung zeigen",
+    "Show results": "Ergebnisse zeigen",
     "Show the import result.": "Das Ergebnis des Imports anzeigen.",
     "Shut down the server.": "Server herunterfahren",
     "Software installation status:": "Status der Softwareinstallationen:",
@@ -350,6 +357,8 @@
     "The black list was changed.": "Die eigene Black-Liste wurde geändert.",
     "The boot files for the selected devices was written.": "Die Startdateien wurden für die gewählten Geräten geschrieben.",
     "The cephalix list was changed.": "Die eigene Cephalix-Liste wurde geändert.",
+    "The challenge is now available. You must not change it.": "Dieser Test ist jetzt veröffentlich und darf nicht geändert werden.",
+    "The challenge itself will stand and can be reused.": "Der Test selbst wird nicht gelöscht und kann noch mal verwendet werden.",
     "The changes will be lost if you leave the module.": "Ihre Änderungen gehen verloren, wenn Sie das Modul verlassen.",
     "The file system quota for '%s' was set.": "Dateisystemquota für '%s' wurde gesetzt.",
     "The filesystem quotas was synced successfully": "Dateisystemquota wurde erfolgreich synchronisiert.",
@@ -359,6 +368,7 @@
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The name of the created users have the format groupnameNN": "Der Benutzername der angelegten Konten sieht folgender maßen aus: GruppennameNN",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
+    "The results of this challenge will be archived and removed from the database.": "Die Ergebnisse dieses Tests werden archiviert und aus der Datenbank entfert.",
     "The room was modified successfully.": "Raum wurde erfolgreich geändert.",
     "The white list was changed.": "Die eigene White-Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windows-Profil von '%s' wurde eingefroren.",
