Implementing download of test results.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,8 +1,4 @@
 {
-    "Challenge was successfully assigned and stated.":"Test wurde erfolgreich zugewiesenen und veröffentlicht.",
-    "Type":"Typ",
-    "Stop and evaluate challenge and archive the results.":"Test anhalten auswerten und die Ergebnisse archivieren.",
-    "Assign and start challenge.":"Test zuweisen und sarten.",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -55,6 +51,7 @@
     "Apply an action on all devices in room": "Eine Aktion an allen Geräten im Raum anwenden.",
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
+    "Assign and start challenge.": "Test zuweisen und sarten.",
     "Available ACLs": "Weitere ACLs",
     "Available Printers": "Weitere Drucker",
     "Available groups:": "Weitere Gruppen:",
@@ -66,6 +63,7 @@
     "Boot configuration for %s was removed successfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
     "Boot configuration was saved successfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
     "Cancel": "Verwerfen",
+    "Challenge was successfully assigned and stated.": "Test wurde erfolgreich zugewiesenen und veröffentlicht.",
     "Challenge was successfully modified.": "Test wurde erfolgreich gespeichert",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Clean up and archive results": "Ergebnisse archivieren und löschen",
@@ -344,6 +342,8 @@
     "Start time": "Gestartet",
     "Status of the Services": "Status der Serverdienste",
     "Status of the institutes": "Status der Server",
+    "Stop and evaluate challenge and archive the results.": "Test anhalten auswerten und die Ergebnisse archivieren.",
+    "Stop challange": "Laufenden Test beenden.",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
     "Students": "Schüler",
@@ -384,6 +384,7 @@
     "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden.",
     "To login": "Anmelden",
     "Toggle yes no": "umschalten",
+    "Type": "Typ",
     "US": "Entfernen geplant",
     "Uid contains not allowed characters.": "Benutzername enthält nicht erlaubte Zeichen.",
     "Update the server.": "Server aktualisieren.",
