Remove console logs. Implementing auto save functions.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,11 @@
 {
+    "Answers were saved correct.":"Antworten wurden erfolgreich gespeichert.",
+    "Turn off auto save. Changes will be saved only by push the checkmark.":"Automatisches Speichern abschalten. Änderungen weren nur beim Drücken des grünen Häckchens gespeichert.",
+    "Turn on auto save. All changes will be saved inmediately.":"Automatisches Speichern einschalten. Alle Änderungen umgehend gespeichert.",
+    "Remove challange and all archived results.":"Test und alle zugehörigen Ergebnisse löschen.",
+    "Challenge was removed successfully.":"Test wurde erfolgreich gelöscht.",
+    "Challenge was successfully added.":"Das Test wurde erfolgreich erstellt.",
+    "Your changes will be lost if you close this window.":"Ihre Änderungen gehen verloren, wenn Sie das Fenster schließen.",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -372,7 +379,7 @@
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The name of the created users have the format groupnameNN": "Der Benutzername der angelegten Konten sieht folgender maßen aus: GruppennameNN",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
-    "The results of this challenge will be archived and removed from the database.": "Die Ergebnisse dieses Tests werden archiviert und aus der Datenbank entfert.",
+    "The results of this challenge will be archived and removed from the database.": "Die Ergebnisse dieses Tests werden archiviert und aus der Datenbank entfernt.",
     "The room was modified successfully.": "Raum wurde erfolgreich geändert.",
     "The white list was changed.": "Die eigene White-Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windows-Profil von '%s' wurde eingefroren.",
