Introduce teaching subjects and subject areas

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,7 +1,7 @@
 {
     "Challenges":"Multiple-Choice Tests erstellen",
     "Todos":"Multiple-Choice Tests",
-    "Manage the archived results of this challange.":"Archivierte Ergebnisse dieses Tests verwalten.",
+    "Manage the archived results of this challenge.":"Archivierte Ergebnisse dieses Tests verwalten.",
     "New question":"Neue Frage",
     "List of questions":"Fragenkatalog",
     "Close":"Schließen",
@@ -286,7 +286,7 @@
     "Refresh the import list": "Liste der Importe neu laden",
     "Remote access": "Fernwartung",
     "Remove archived images": "Archivierte Images löschen",
-    "Remove challange and all archived results.": "Test und alle zugehörigen Ergebnisse löschen.",
+    "Remove challenge and all archived results.": "Test und alle zugehörigen Ergebnisse löschen.",
     "Repeat new password": "Wiederhole das neue Passwort",
     "Request was sent. Please be patient!": "Die Anfrage wurde gesendet. Bitte warten!",
     "Reset password": "Passwort setzen",
@@ -354,7 +354,7 @@
     "Status of the Services": "Status der Serverdienste",
     "Status of the institutes": "Status der Server",
     "Stop and evaluate challenge and archive the results.": "Test anhalten auswerten und die Ergebnisse archivieren.",
-    "Stop challange": "Laufenden Test beenden.",
+    "Stop challenge": "Laufenden Test beenden.",
     "Stop firewall": "Firewall anhalten",
     "Stop the running user import": "Laufenden Import anhalten",
     "Students": "Schüler",
