Use ionicSelectablePlaceholderTemplate for ionic select. New feature. Allow only some domains instead of open the whole internet.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,8 @@
 {
+    "Insert one domain name pro line. URLs are not allowed.":"Tragen Sie pro Zeile einen Domainnamen ein. URLs sind nicht erlaubt.",
+    "Insert allowed domains":"Erlaubte Domainnamen eintragen",
+    "teachingSubject":"Schulfach",
+    "Title":"Tietel",
     "Challenges":"Multiple-Choice Tests erstellen",
     "Todos":"Multiple-Choice Tests",
     "Manage the archived results of this challenge.":"Archivierte Ergebnisse dieses Tests verwalten.",
