♻️ einige Übersetzungen angepasst

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -40,17 +40,17 @@
     "Add userImport": "Benutzerimport starten",
     "Addon modules": "Zusatzmodule",
     "All devices": "Alle Geräte",
-    "All hwconfs": "Alle",
+    "All hwconfs": "Alle Hardwarekonfigurationen",
     "All institutes": "Alle Institutionen",
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
-    "Apply Default": "Standardstatus",
+    "Apply Default": "Standardstatus setzen",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
     "Apply an action on all devices in room": "Eine Aktion an allen Geräten im Raum anwenden.",
     "Apply changes": "Änderungen anwenden",
     "Apply state on all running devices": "Status an allen laufenden Geräten anwenden.",
-    "Available ACLs": "Weitere ACLs",
-    "Available Printers": "Weitere Drucker",
+    "Available ACLs": "Weitere ACLs:",
+    "Available Printers": "Weitere Drucker:",
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Sicherung",
@@ -59,7 +59,7 @@
     "Basic configuration": "Grundkonfiguration",
     "Boot configuration for %s was removed successfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
     "Boot configuration was saved successfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
-    "Cancel": "Verwerfen",
+    "Cancel": "Abbrechen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Collect files": "Dateien einsammeln",
     "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus den Exportverzeichnissen der angemeldeten Benutzer oder der Workstationsbenutzer einsammeln.",
@@ -72,32 +72,32 @@
     "Create AdHoc-Room": "AdHoc-Raum für die Gruppe anlegen",
     "Create a new announcement": "Neue Nachricht erstellen",
     "Create a new contact": "Neuen Kontak erstellen",
-    "Create a new customer.": "Einen neuen Kunden anlegen",
-    "Create a new device.": "Ein neues Gerät anlegen",
+    "Create a new customer.": "Neuen Kunden anlegen",
+    "Create a new device.": "Neues Gerät anlegen",
     "Create a new faq": "Neues FAQ erstellen",
-    "Create a new group": "Eine neue Gruppe anlegen",
-    "Create a new hardware configuration": "Eine neue Gerätekonfiguration anlegen",
-    "Create a new installation set": "Ein neues Installationsset anlegen",
-    "Create a new institute": "Eine neue Institution anlegen",
-    "Create a new printer": "Einen neuen Drucker erstellen",
-    "Create a new printer device": "Einen neuen Drucker anlegen.",
+    "Create a new group": "Neue Gruppe anlegen",
+    "Create a new hardware configuration": "Neue Gerätekonfiguration anlegen",
+    "Create a new installation set": "Neues Installationsset anlegen",
+    "Create a new institute": "Neue Institution anlegen",
+    "Create a new printer": "Neuen Drucker erstellen",
+    "Create a new printer device": "Neuen Drucker anlegen.",
     "Create a new printer queue": "Eine Warteschlange zu einem existierenden Drucker anlegen.",
-    "Create a new room": "Einen neuen Raum anlegen",
+    "Create a new room": "Neuen Raum erstellen",
     "Create a new software package": "Softwarepaket erstellen",
     "Create a new task": "Neue Aufgabe erstellen",
-    "Create a new user": "Einen neuen Benutzer anlegen",
+    "Create a new user": "Neuen Benutzer erstellen",
     "Create installation set": "Installationsset erstellen",
     "Custom list was written successfull": "Eigene Liste wurde erfolgreich geschrieben",
     "Customers": "Kunden",
     "DHCP Parameter was added successfully": "DHCP-Parameter wurde erfolgreich zugefügt.",
     "DNS server configuration was written successfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
     "Default Printer": "Standarddrucker",
-    "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählte Server konfigurieren",
+    "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählten Server konfigurieren",
     "Delete hwconf": "Gerätekonfiguration löschen",
     "Delete institute": "Institution löschen",
     "Delete selected access rules": "Ausgewählte Raumzugriffsregeln löschen",
-    "Delete selected outgoing rule": "Markierte ausgehende Regel löschen",
-    "Delete selected remote access rule": "Markierte Fernwartungsregel löschen",
+    "Delete selected outgoing rule": "Ausgewählte ausgehende Regel löschen",
+    "Delete selected remote access rule": "Ausgewählte Fernwartungsregel löschen",
     "Delete the import.": "Import löschen",
     "Denied Categories": "Verbotene Kategorien",
     "Device": "Gerät",
@@ -109,12 +109,12 @@
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
-    "Download of the softwares was started successfully": "Das Heruntreladen von Softwarepaketen wurde gestartet.",
+    "Download of the softwares was started successfully": "Das Heruntreladen der Softwarepakete wurde gestartet.",
     "Download software packages.": "Softwarepakete herunterladen.",
     "Download the installation image": "Installationsmedium herunterladen",
     "Download the password files as pdf files.": "Passwortdateien als PDF's herunterladen.",
     "Download the password files as txt files.": "Passwortdateien als TXT herunterladen.",
-    "Download the setup script": "Setupscript herunterladen",
+    "Download the setup script": "Setup Script herunterladen",
     "Edit adhocroom": "AdHoc Raum bearbeiten",
     "Edit announcement": "Nachricht bearbeiten",
     "Edit contact": "Kontakt bearbeiten",
@@ -158,7 +158,7 @@
     "Get owned tasks": "Eigene Aufgaben",
     "Group": "Gruppe",
     "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
-    "Group was deleted.": "Gruppe wurde erfolgreich gelöscht.",
+    "Group was deleted.": "Die Gruppe wurde erfolgreich gelöscht.",
     "Groups": "Gruppen",
     "Guest Users": "Gastbenutzer",
     "HWConf": "Gerätekonfiguration",
@@ -195,8 +195,8 @@
     "Manage access in the rooms": "Zugriffsstatus in den Räumen verwalten",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geräte verwalten",
-    "Manage devices in selected room:": "Geräte bearbeiten. Raum:",
-    "Manage firewall configuration": "Firewalleinstellungen",
+    "Manage devices in selected room:": "Geräte verwalten im Raum:",
+    "Manage firewall configuration": "Firewall Einstellungen",
     "Manage groups": "Gruppen verwalten",
     "Manage hwconfs": "Gerätekonfigurationen verwalten",
     "Manage institutes": "Institute verwalten",
