Some enhancements. Now we can handle empty answer and question texts. Show actuall size of the edited text.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,15 +1,4 @@
 {
-    "Insert one domain name pro line. URLs are not allowed.":"Tragen Sie pro Zeile einen Domainnamen ein. URLs sind nicht erlaubt.",
-    "Insert allowed domains":"Erlaubte Domainnamen eintragen",
-    "teachingSubject":"Schulfach",
-    "Title":"Tietel",
-    "Challenges":"Multiple-Choice Tests erstellen",
-    "Todos":"Multiple-Choice Tests",
-    "Manage the archived results of this challenge.":"Archivierte Ergebnisse dieses Tests verwalten.",
-    "New question":"Neue Frage",
-    "List of questions":"Fragenkatalog",
-    "Close":"Schließen",
-    "Reload tests to work on":"Zugewiesene Tests abrufen",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -57,6 +46,7 @@
     "All institutes": "Alle Institutionen",
     "All rooms": "Alle Räume",
     "All users": "Alle Benutzer",
+    "Answer text.": "Antworttext eintragen.",
     "Answers were saved correct.": "Antworten wurden erfolgreich gespeichert.",
     "Apply Default": "Standardstatus",
     "Apply actions on the selected objects": "Aktionen an den ausgewählten Objekten ausführen.",
@@ -79,8 +69,10 @@
     "Challenge was successfully added.": "Das Test wurde erfolgreich erstellt.",
     "Challenge was successfully assigned and stated.": "Test wurde erfolgreich zugewiesenen und veröffentlicht.",
     "Challenge was successfully modified.": "Test wurde erfolgreich gespeichert",
+    "Challenges": "Multiple-Choice Tests erstellen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Clean up and archive results": "Ergebnisse archivieren und löschen",
+    "Close": "Schließen",
     "Collect files": "Dateien einsammeln",
     "Collect the file from the Export directory of the logged on users or of the workstation users.": "Dateien aus den Exportverzeichnissen der angemeldeten Benutzer oder der Workstationsbenutzer einsammeln.",
     "Comma separated list": "Elemente mit Komma trennen!",
@@ -198,6 +190,8 @@
     "Import was stopped.": "Import wurde angehalten",
     "Incoming rules": "Eingehende Regeln",
     "Informations": "Informationen",
+    "Insert allowed domains": "Erlaubte Domainnamen eintragen",
+    "Insert one domain name pro line. URLs are not allowed.": "Tragen Sie pro Zeile einen Domainnamen ein. URLs sind nicht erlaubt.",
     "Installation Status": "Installationstatus",
     "Installation sets": "Installationssets",
     "Institutes": "Institutionen",
@@ -212,6 +206,7 @@
     "List of owned contacts": "Eigene Kontakte",
     "List of owned faqs": "Eigene FAQs",
     "List of owned tasks": "Eigene Aufgaben",
+    "List of questions": "Fragenkatalog",
     "List of the results:": "Liste der Rückmeldungen",
     "Loading data ...": "Daten werden geladen ...",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
@@ -235,9 +230,11 @@
     "Manage software installation sets:": "Installationssets verwalten",
     "Manage system acls for groups and users": "ACLs von Gruppen und Benutzern verwalten",
     "Manage system acls of the selected object:": "ACLs des gewählten Objekts verwalten:",
+    "Manage the archived results of this challenge.": "Archivierte Ergebnisse dieses Tests verwalten.",
     "Manage tickets": "Tickets verwalten",
     "Manage user imports": "Benutzerimporte verwalten",
     "Manage users": "Benutzer verwalten",
+    "Manage yourself": "Selbstverwaltung",
     "Member of groups:": "Mitglied der Gruppen:",
     "Members of the group:": "Mitglieder der Gruppe:",
     "Members of the selected hwconf:": "Geräte in der Gerätekonfiguration:",
@@ -254,12 +251,13 @@
     "More right answers": "Mehrere richtigen Antworten",
     "Multicast cloning of": "Multicast Klonen von",
     "My Devices": "Eigene Geräte",
-    "My groups": "Eigene Gruppen",
-    "My guests": "Eigene Gastgruppen",
-    "My students": "Meine Schüler",
+    "My education/groups": "Eigene Gruppen",
+    "My education/guestUsers": "Eigene Gastgruppen",
+    "My education/users": "Meine Schüler",
     "MyGroups": "Meine Gruppen",
     "NODEVICE": "Kein Gerät",
     "New password": "Neues Passwort",
+    "New question": "Neue Frage",
     "New quota in MB": "Neuer Quota in MB",
     "No default printer": "Kein Standarddrucker",
     "One right answer": "Eine richtige Antwort",
@@ -285,9 +283,11 @@
     "Profile": "Profil",
     "Protocol": "Protokoll",
     "Proxy basic configuration was written successfully.": "Proxykonfiguration wurde erfolgreich geschrieben.",
+    "Question text.": "Fragetext eintragen,",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
+    "Reload tests to work on": "Zugewiesene Tests abrufen",
     "Remote access": "Fernwartung",
     "Remove archived images": "Archivierte Images löschen",
     "Remove challenge and all archived results.": "Test und alle zugehörigen Ergebnisse löschen.",
@@ -397,7 +397,9 @@
     "This group must not be deleted.": "Diese Gruppe darf nicht gelöscht werden.",
     "This is a printer device with defined printer queues. You have to delete this devices via printer management.": "Das ist ein Drucker mit zugewiesenen Warteschlangen. Bitte entfernen Sie es in der Druckerverwaltung.",
     "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden.",
+    "Title": "Tietel",
     "To login": "Anmelden",
+    "Todos": "Multiple-Choice Tests",
     "Toggle yes no": "umschalten",
     "Turn off auto save. Changes will be saved only by push the checkmark.": "Automatisches Speichern abschalten. Änderungen weren nur beim Drücken des grünen Häckchens gespeichert.",
     "Turn on auto save. All changes will be saved inmediately.": "Automatisches Speichern einschalten. Alle Änderungen umgehend gespeichert.",
@@ -557,7 +559,7 @@
     "locality": "Ort",
     "loggedInName": "Angemeldeter Benutzer",
     "login": "Anmelden",
-    "logout": "Abmelden",
+    "logout": "abmelden",
     "mac": "MAC-Adresse",
     "mailAliases": "E-Mail-Aliase",
     "mandatoryProfile": "Windows-Profil einfrieren.",
@@ -623,11 +625,12 @@
     "rowMultiSelectWithClick": "Mehrere Zeilen per Klick auswählen",
     "rows": "Reihen",
     "runningKernel": "Kernelversion",
-    "rwProfile": "Windows-Profil änderbar machen.",
+    "rwProfile": "Windows-Profil freigeben.",
     "saturday": "Sonnabend",
     "search": "suchen",
     "secondarySchool": "Mittel/Hauptschule",
     "secondary_school": "Sekundarschule",
+    "select": "wählen",
     "serial": "Seriennummer",
     "serverNetwork": "Servernetz",
     "serverReboot": "Server neu starten",
@@ -637,11 +640,12 @@
     "set value": "Wert setzen",
     "setContract": "Vertrag setzten",
     "setFilesystemQuota": "Dateisystemquota setzen",
+    "setMailSystemQuota": "Mailsystemquota setzen",
     "setMailsystemQuota": "Mailsystemquota setzen",
     "setPassword": "Passwort ändern",
     "setValidity": "Gültigkeit setzten",
     "sethwconfofroom": "Raum-Gerätekonfiguration setzen.",
-    "shutdown": "Ausschalten",
+    "shutdown": "ausschalten",
     "size": "Größe",
     "sn-gn-bd": "Name  + Geburtstag",
     "software": "Software",
@@ -668,12 +672,16 @@
     "sysadminsOnly": "Nur durch Systemadministratoren",
     "tasks": "Aufgaben",
     "teachers": "Lehrer",
+    "teachingSubject": "Schulfach",
     "telephone": "Telefonnummer",
     "test": "Als Test ausführen",
     "text": "Text",
     "thursday": "Donnerstag",
     "ticketStatus": "Status",
     "title": "Titel",
+    "to %s users": "für die Benutzer: %s",
+    "to the group:": "für die Gruppen",
+    "to the groups:": "für die Gruppen",
     "tuesday": "Dienstag",
     "type": "Art",
     "uid": "Benutzername (Login)",
@@ -695,7 +703,7 @@
     "windowsDriver": "Treiberverteilung",
     "wlanIp": "WLAN-IP-Adresse",
     "wlanMac": "WLAN-MAC-Adresse",
-    "wol": "Einschalten",
+    "wol": "einschalten",
     "workSchool": "Berufsschule",
     "workTime": "Erfasste Arbeitszeit in Minuten",
     "workgroup": "Projektgruppe"
