Ticket#1921 Import-Export-Ordner Fix overhanding cleanUp variable. Enhance texts.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -164,6 +164,7 @@
     "Filtered internet access": "Gefilterter Internetzugang",
     "Firewall incoming access rule  was set successfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
     "Firewall outgoing access rule  was set successfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
+    "For students and guest users the will be cleaned up anyway.": "Für Schüler und Gastbenutzer wird <i>Export</i> immer geleert.",
     "Get corresponding announcements": "Aktuelle Nachrichten",
     "Get corresponding contacts": "Veröffentlichte Kontakte",
     "Get corresponding faqs": "Veröffentlichte FAQs",
@@ -462,7 +463,7 @@
     "class": "Klasse",
     "classes": "Klassen",
     "cleanClassDirs": "Klassenverzeichnisse leeren",
-    "cleanUp": "Vor dem Verteilen Importverzeichnis aufräumen",
+    "cleanUp": "Vor dem Verteilen Importverzeichnis aufräumen.<br><i>Gilt nur für Schüler und Gastbenutzer</i>",
     "cleanUpExport": "Exportverzeichnis aufräumen",
     "close": "schließen",
     "collect": "Dateien einsammeln",
